fixed margin on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -176,6 +176,7 @@ footer p {
   }
   footer p {
     font-size: 0.4rem;
+    margin-top: 0px;
   }
 }
 
